--- a/Project Cinema/Base.lproj/Main.storyboard
+++ b/Project Cinema/Base.lproj/Main.storyboard
@@ -268,9 +268,13 @@
                                                         <rect key="frame" x="0.0" y="0.0" width="107" height="210"/>
                                                         <autoresizingMask key="autoresizingMask"/>
                                                         <subviews>
-                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="h4T-Xh-qrU">
+                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="h4T-Xh-qrU">
                                                                 <rect key="frame" x="0.0" y="0.0" width="107" height="160"/>
                                                                 <color key="backgroundColor" red="0.83011744970000001" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="width" constant="107" id="ex6-k0-gUW"/>
+                                                                    <constraint firstAttribute="height" constant="160" id="fAo-Tz-bhK"/>
+                                                                </constraints>
                                                                 <userDefinedRuntimeAttributes>
                                                                     <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                                         <integer key="value" value="4"/>
@@ -279,18 +283,15 @@
                                                                 </userDefinedRuntimeAttributes>
                                                             </imageView>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="to7-Zd-GlT">
-                                                                <rect key="frame" x="0.0" y="164" width="107" height="30"/>
-                                                                <constraints>
-                                                                    <constraint firstAttribute="height" constant="30" id="RtR-2K-rJM"/>
-                                                                </constraints>
+                                                                <rect key="frame" x="0.0" y="164" width="107" height="14"/>
                                                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
                                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zk0-Vf-eeb">
-                                                                <rect key="frame" x="0.0" y="197" width="107" height="13"/>
+                                                                <rect key="frame" x="0.0" y="182" width="107" height="13"/>
                                                                 <constraints>
-                                                                    <constraint firstAttribute="height" constant="13" id="h1x-Os-MKg"/>
+                                                                    <constraint firstAttribute="height" constant="13" id="6bx-kw-px8"/>
                                                                 </constraints>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -300,12 +301,15 @@
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                     </view>
                                                     <constraints>
-                                                        <constraint firstItem="Zk0-Vf-eeb" firstAttribute="top" secondItem="to7-Zd-GlT" secondAttribute="bottom" constant="3" id="GyA-qe-tGp"/>
-                                                        <constraint firstItem="to7-Zd-GlT" firstAttribute="leading" secondItem="8Qw-6b-Ngz" secondAttribute="leading" id="I2t-eD-fFu"/>
-                                                        <constraint firstAttribute="bottom" secondItem="Zk0-Vf-eeb" secondAttribute="bottom" id="JqE-6d-yXv"/>
-                                                        <constraint firstAttribute="trailing" secondItem="to7-Zd-GlT" secondAttribute="trailing" id="leh-D7-enW"/>
-                                                        <constraint firstItem="Zk0-Vf-eeb" firstAttribute="leading" secondItem="8Qw-6b-Ngz" secondAttribute="leading" id="qr3-36-72b"/>
-                                                        <constraint firstAttribute="trailing" secondItem="Zk0-Vf-eeb" secondAttribute="trailing" id="xNf-gU-EZm"/>
+                                                        <constraint firstItem="Zk0-Vf-eeb" firstAttribute="leading" secondItem="8Qw-6b-Ngz" secondAttribute="leading" id="1Q1-bF-8Wk"/>
+                                                        <constraint firstItem="h4T-Xh-qrU" firstAttribute="leading" secondItem="8Qw-6b-Ngz" secondAttribute="leading" id="E8O-At-cI2"/>
+                                                        <constraint firstItem="Zk0-Vf-eeb" firstAttribute="top" secondItem="to7-Zd-GlT" secondAttribute="bottom" constant="4" id="Ez0-a5-ek3"/>
+                                                        <constraint firstItem="to7-Zd-GlT" firstAttribute="leading" secondItem="8Qw-6b-Ngz" secondAttribute="leading" id="LbZ-Ow-rf0"/>
+                                                        <constraint firstItem="Zk0-Vf-eeb" firstAttribute="top" secondItem="to7-Zd-GlT" secondAttribute="bottom" constant="4" id="NnM-BN-k19"/>
+                                                        <constraint firstItem="h4T-Xh-qrU" firstAttribute="top" secondItem="8Qw-6b-Ngz" secondAttribute="top" id="NxM-7n-S8m"/>
+                                                        <constraint firstItem="to7-Zd-GlT" firstAttribute="top" secondItem="h4T-Xh-qrU" secondAttribute="bottom" constant="4" id="d8X-OJ-Uyl"/>
+                                                        <constraint firstAttribute="trailing" secondItem="Zk0-Vf-eeb" secondAttribute="trailing" id="nPG-dY-o8J"/>
+                                                        <constraint firstAttribute="trailing" secondItem="to7-Zd-GlT" secondAttribute="trailing" id="yEe-nX-Wka"/>
                                                     </constraints>
                                                     <connections>
                                                         <outlet property="movieImageView" destination="h4T-Xh-qrU" id="kgr-Y2-obA"/>
@@ -518,9 +522,9 @@
                                             </constraints>
                                         </imageView>
                                         <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wdm-Xn-EB5">
-                                            <rect key="frame" x="0.0" y="158" width="600" height="42"/>
+                                            <rect key="frame" x="0.0" y="159" width="600" height="41"/>
                                             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="blu-gO-g2F">
-                                                <rect key="frame" x="0.0" y="0.0" width="600" height="42"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="600" height="41"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yYv-BZ-dIy">
@@ -550,11 +554,8 @@
                                                         <color key="shadowColor" red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
                                                         <size key="shadowOffset" width="1" height="1"/>
                                                     </label>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="{Runtime} | {[Genres]}" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eln-P8-ekk">
-                                                        <rect key="frame" x="48" y="24" width="544" height="14"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="height" constant="14" id="Psx-xp-yqA"/>
-                                                        </constraints>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="{Runtime} | {[Genres]}" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eln-P8-ekk">
+                                                        <rect key="frame" x="48" y="24" width="544" height="13"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                         <nil key="highlightedColor"/>
@@ -1476,7 +1477,7 @@
         <image name="trailerIcon" width="25" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="raM-0z-gmg"/>
+        <segue reference="ARj-tT-Kvi"/>
         <segue reference="rc5-fB-3oZ"/>
     </inferredMetricsTieBreakers>
 </document>
